--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#############################################
+#                  PYTHON                   #
+#############################################
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
