--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ google-pasta==0.2.0
 grpcio==1.66.1
 h5py==3.11.0
 idna==3.10
+joblib==1.4.2
 keras==3.5.0
 libclang==18.1.1
 Markdown==3.7
@@ -20,10 +21,15 @@ numpy==1.26.4
 opt-einsum==3.3.0
 optree==0.12.1
 packaging==24.1
+pandas==2.2.3
 protobuf==4.25.5
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
 requests==2.32.3
 rich==13.8.1
+scikit-learn==1.5.2
+scipy==1.14.1
 six==1.16.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
@@ -31,7 +37,9 @@ tensorflow==2.17.0
 tensorflow-intel==2.17.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
+threadpoolctl==3.5.0
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.0.4
 wrapt==1.16.0
