--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 #############################################
+#                   MISC                    #
+#############################################
+crawl-300d-2M-subword.bin
+crawl-300d-2M-subword.vec
+.vscode/
+
+
+#############################################
 #                  PYTHON                   #
 #############################################
 
