--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 #############################################
 #                   MISC                    #
 #############################################
-crawl-300d-2M-subword.bin
-crawl-300d-2M-subword.vec
+
 .vscode/
-rnn\data\review_data_embeddings.pkl
+rnn/data/review_data_embeddings.pkl
+rnn/models/
+rnn/data/*.pkl
 
 
 #############################################
