implemented rnn feature extractor and ffnn

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,16 @@
 #############################################
 
 .vscode/
+data/*.pkl
+data/*.model
+
+rnn/pretrained_models/
+
+
 rnn/data/review_data_embeddings.pkl
 rnn/models/
-rnn/pretrained_models/
 rnn/data/*.pkl
-rnn/runs/
+fasttext/
 
 
 #############################################
